--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -10,7 +10,15 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- 249 mice were effected by the regimens.\n",
+    "- One mouse was removed due to being a duplicate.\n",
+    "- Capomulin and Ramicane have the smallest tumors on average and had more # of Observed Mouse Timepoints.\n",
+    "- There were more male mice than female.\n",
+    "- Ketapril and Naftisol are the most harmful.\n",
+    "- Infubinol has outliers\n",
+    "- The tumors reduced on mouse l509 as time went on.\n",
+    "- as the weight of the mouse increases, so does the average tumor volume.\n",
+    "\n",
     " "
    ]
   },
@@ -1585,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1895,7 @@
        "y793                  1.40  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1916,7 @@
        "Text(0, 0.5, 'Average Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
